<resources>
    <string name="app_name">MONA</string>

    <!-- BASIC -->
    <string name="Yes">Oui</string>
    <string name="No">Non</string>

    <string name="ODJ">Aujourd\'hui</string>
    <string name="Map">Carte</string>
    <string name="List">Liste</string>
    <string name="Collection">Collection</string>
    <string name="More">Plus</string>

    <string name="Item">Item</string>
    <string name="Settings">Paramètres</string>
    <string name="Badge">Badges</string>
    <string name="BadgeItem">Badge Item</string>
    <string name="ItemMap">Map of Item</string>
    <string name="Opinion">Comment trouvez-vous cette œuvre?</string>
    <string name="Rating">Notez cette œuvre</string>
    <string name="LieuRating">Notez ce lieu</string>

    <!-- MORE FRAGMENT -->
    <string name="about">À propos</string>
    <string name="sign_out">Se déconnecter</string>
    <string name="how_it_works">Comment ça marche ?</string>
    <string name="who_are_we">Qui sommes-nous?</string>
    <string name="offline_mode">Mode hors-ligne</string>

    <string name="more_user_artworks_count">%1$d œuvres collectionnées </string>
    <string name="more_user_badges_count">%1$d badges débloqués </string>

    <string name="collection_count">Œuvres collectionnées </string>
    <string name="badges_count"> badges débloqués</string>
    <string name="MapTiler">MapTiler</string>
    <string name="PNG">.png</string>
    <string name="slash">/</string>
    <string name="interogationMark">\?</string>
    <string name="key">key</string>
    <string name="equal">=</string>
    <string name="MapTilerURL">https://api.maptiler.com/maps/basic/256/</string>
    <string name="artworksURL">https://picasso.iro.umontreal.ca/~mona/api/artworks</string>
    <string name="badgesURL">https://picasso.iro.umontreal.ca/~mona/api/badges</string>

    <!-- PIN -->
    <string name="pinDialogAlertTitle">Confirmation</string>
    <string name="pinDialogAlertMessage">Voulez-vous changer la position du pin ?</string>
    <string name="pinDialogAlertRelocate">Relocaliser</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="oeuvre_targetted">L\'œuvre est maintenant ciblée</string>
    <string name="oeuvre_untargetted">L\'œuvre n\'est plus ciblée</string>

    <string name="target_oeuvre_button">Target the artwork</string>


    <!-- Map sorting options -->
    <string name="sort_menu">Options de tri</string>
    <string name="oeuvre_sort">Trier les oeuvres</string>
    <string name="lieu_sort">Trier les lieux</string>
    <string name="patrimoine_sort">Trier les patrimoines</string>

    <string name="sort_oeuvre_noncollected">Trier par œuvres non collectionnées</string>
    <string name="sort_oeuvre_target">Trier par œuvres ciblées</string>
    <string name="sort_oeuvre_collected">Trier par œuvres collectionnées</string>
    <string name="sort_lieu_noncollected">Trier par lieux non collectionnés</string>
    <string name="sort_lieu_target">Trier par lieux ciblés</string>
    <string name="sort_lieu_collected">Trier par lieux collectionnés</string>
    <string name="sort_patrimoine_noncollected">Trier par patrimoine non collectionnés</string>
    <string name="sort_patrimoine_target">Trier par patrimoine ciblés</string>
    <string name="sort_patrimoine_collected">Trier par lieux collectionnés</string>
    <!-- List sorting options -->
    <string name="featured_list">En vedette</string>

    <string name="sort_id">Par ID</string>
    <string name="sort_alphabetical">Par ordre alphabétique</string>
    <string name="sort_borough">Par quartier</string>
    <string name="sort_distance">Par distance</string>

    <!-- authentification -->
    <string name="username">nom d\'utilisateur</string>
    <string name="password">mot de passe</string>
    <string name="confirm_password">confirmez votre mot de passe</string>
    <string name="login_error_message">Le nom d\'utilisateur ou le mot de passe est incorrect</string>
    <string name="login_connexion_error_message">Erreur de connexion au serveur</string>
    <string name="register_error_message">Nom d\'utilisateur indisponible ou mot de passe invalide</string>
    <string name="no_account_message">Pas de compte ? Inscrivez-vous ici</string>
    <string name="login_button">s\'identifier</string>
    <string name="register_button">Créer mon compte</string>
    <string name="register_name_not_available">Le nom d\'utilisateur non disponible</string>

    <string name="odj_collected_message">Félicitations ! Œuvre maintenant collectionnée</string>
    <!--Online-->
    <string name="offline_message">Vous êtes hors-ligne</string>
    <string name="online_message">Vous êtes connecté à internet</string>
    <string name="online_requirement_message">Vous devez être connecté à internet pour passer en ligne</string>
    <string name="go_online">Aller en mode en line (actuellement hors-ligne)</string>
    <string name="go_offline">Aller en mode hors-ligne (actuellement en ligne)</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Badge Activity Catégories -->
    <string name="badges_type_borough">Quartiers</string>
    <string name="badges_type_artworks">Œuvres</string>
    <string name="badges_type_category">Catégories</string>
    <string name="badges_type_other">Autres</string>

    <!-- Badge Activity Toolbar Title -->
    <string name="badge_toolbar_title_main">Badges</string>

    <!-- Badge Pop-Up -->
    <string name="popup_nouveau_badge">Nouveau Badge !</string>

    <!-- Badge Detail -->
    <string name="badge_detail_count">%1$d / %2$d </string>
    <string name="oeuvre_du_jour">L\'œuvre du jour</string>
    <string name="odj_logo">odj_logo</string>
    <string name="redirection_carte">Voir sur la carte</string>
    <string name="ajoute_cible_a_la_carte">Ajoute cible a la carte</string>
    <string name="prendre_la_photo">Prendre la photo</string>
    <string name="decouverte_du_jour">Découverte du jour</string>
    <string name="minimap_logo">minimap logo</string>
    <string name="voir_plus"><u>voir plus...</u></string>
    <string name="DDJ">Découverte</string>
    <string name="Autre">Autre</string>
    <string name="oeuvres_collectionnees">œuvres collectionnées</string>
    <string name="badges_debloques">Badges débloqués</string>
    <string name="takephoto">Prendre en photo</string>
    <string name="end_tutorial">Terminer le tutoriel</string>
    <string name="no_picture_yet">Vous n\'avez encore photographié aucun contenu</string>
    <string name="badges">Badges</string>

</resources>
