<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity"
    android:background="@color/offWhite"
    android:gravity="center">

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/authentification_margin"
        android:textColor="@color/black"
        android:hint="@string/username"
        android:textColorHint="@color/grey"
        android:backgroundTint="@color/monaYellow">

    </EditText>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/authentification_margin"
        android:textColor="@color/black"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/grey"
        android:backgroundTint="@color/monaYellow">

    </EditText>


    <TextView
        android:id="@+id/login_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/authentification_margin"
        android:text="@string/login_error_message"
        android:textColor="@color/red"
        android:visibility="invisible">


    </TextView>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/authentification_margin"
        android:backgroundTint="@color/androidBlue"
        android:text="@string/login_button" />

    <Button
        android:id="@+id/register_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/authentification_margin"
        android:text="@string/no_account_message"
        android:textColor="@color/androidBlue"
        android:textAllCaps="false"/>


</LinearLayout>