<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/fragmentViewPager_dest">

    <fragment
        android:id="@+id/fragmentViewPager_dest"
        android:name="com.example.mona.fragment.HomeViewPagerFragment"
        tools:layout="@layout/fragment_view_pager">
        <action
            android:id="@+id/odj_to_map"
            app:destination="@id/oeuvreItemMap_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/odj_to_rating"
            app:destination="@id/oeuvreRating_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/home_to_oeuvre"
            app:destination="@id/oeuvreItem_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>

        <action
            android:id="@+id/home_to_lieu"
            app:destination="@id/lieu_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>

        <action
            android:id="@+id/home_to_text"
            app:destination="@id/moreText_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>


    <fragment
        android:id="@+id/oeuvreItem_dest"
        android:name="com.example.mona.fragment.OeuvreDetailFragment"
        android:label="@string/Item">
        <argument
            android:name="item_selected"
            app:argType="com.example.mona.entity.Oeuvre" />
        <action
            android:id="@+id/open_oeuvre_map"
            app:destination="@id/oeuvreItemMap_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/item_to_rating"
            app:destination="@id/oeuvreRating_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/oeuvreItemMap_dest"
        android:name="com.example.mona.fragment.OeuvreItemMapFragment"
        android:label="@string/ItemMap"
        tools:layout="@layout/fragment_item_map">
        <argument
            android:name="oeuvre"
            app:argType="com.example.mona.entity.Oeuvre"/>
    </fragment>

    <fragment
        android:id="@+id/oeuvreRating_dest"
        android:name="com.example.mona.fragment.OeuvreRatingFragment"
        android:label="@string/Rating"
        tools:layout="@layout/fragment_item_rating">
        <argument
            android:name="oeuvre"
            app:argType="com.example.mona.entity.Oeuvre"/>
    </fragment>


    <fragment
        android:id="@+id/lieu_dest"
        android:name="com.example.mona.fragment.LieuDetailFragment"
        android:label="@string/Item">
        <argument
            android:name="item_selected"
            app:argType="com.example.mona.entity.Lieu" />
        <action
            android:id="@+id/open_lieu_map"
            app:destination="@id/lieuItemMap_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/item_to_rating"
            app:destination="@id/lieuRating_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/lieuRating_dest"
        android:name="com.example.mona.fragment.LieuRatingFragment"
        android:label="@string/LieuRating"
        tools:layout="@layout/fragment_lieu_rating">
        <argument
            android:name="lieu"
            app:argType="com.example.mona.entity.Lieu" />
    </fragment>

    <fragment
        android:id="@+id/lieuItemMap_dest"
        android:name="com.example.mona.fragment.LieuItemMapFragment"
        android:label="@string/LieuRating"
        tools:layout="@layout/fragment_lieu_rating">
        <argument
            android:name="lieu"
            app:argType="com.example.mona.entity.Lieu" />
    </fragment>

    <fragment
        android:id="@+id/moreText_dest"
        android:name="com.example.mona.fragment.MoreTextFragment"
        android:label="@string/More"
        tools:layout="@layout/fragment_more_text">


        <argument
            android:name="file_name"
            app:argType="string" />
    </fragment>


</navigation>