<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:background="?attr/colorSecondary">

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="user@mona.ca"
            style="@style/TextAppearance.Mona.Username"
            android:layout_gravity="bottom"
            android:padding="@dimen/username_padding"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:padding="@dimen/options_padding"
        android:background="?attr/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/options_padding"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_badge"
                android:backgroundTint="@color/grey"/>

            <TextView
                android:id="@+id/badge_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Badge"
                android:clickable="true"
                android:layout_marginHorizontal="@dimen/options_padding"
                style="@style/TextAppearance.Mona.Settings"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/options_padding"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_how_it_works"
                android:backgroundTint="@color/grey"/>

            <TextView
                android:id="@+id/how_it_works_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_it_works"
                android:clickable="true"
                android:layout_marginHorizontal="@dimen/options_padding"
                style="@style/TextAppearance.Mona.Settings"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/options_padding"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_about"
                android:backgroundTint="@color/grey"/>

            <TextView
                android:id="@+id/about_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:clickable="true"
                android:layout_marginHorizontal="@dimen/options_padding"
                style="@style/TextAppearance.Mona.Settings"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/options_padding"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_sun"
                android:backgroundTint="@color/grey"/>

            <TextView
                android:id="@+id/who_are_we_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/who_are_we"
                android:clickable="true"
                android:layout_marginHorizontal="@dimen/options_padding"
                style="@style/TextAppearance.Mona.Settings"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/options_padding"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_conditions"
                android:backgroundTint="@color/grey"/>

            <TextView
                android:id="@+id/conditions_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conditions"
                android:clickable="true"
                android:layout_marginHorizontal="@dimen/options_padding"
                style="@style/TextAppearance.Mona.Settings"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/options_padding"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_sign_out"
                android:backgroundTint="@color/grey"/>

            <TextView
                android:id="@+id/sign_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:clickable="true"
                android:layout_marginHorizontal="@dimen/options_padding"
                style="@style/TextAppearance.Mona.Settings"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>